more linux dependencies for numpy?

--- a/gpio_base/Dockerfile
+++ b/gpio_base/Dockerfile
@@ -6,10 +6,15 @@ RUN apt-get -q update && \
     apt-get -qy install \
         python python-pip \
         python-dev python-pip gcc make \
-        sqlite3 libsqlite3-dev
+        build-essential git cmake \
+        sqlite3 libsqlite3-dev \
+        libblas-dev liblapack-dev \
+        libatlas-base-dev gfortran
 
 RUN pip install rpi.gpio \
         numpy \
         pandas \
         scipy \
         sqlalchemy
+
+RUN echo "COMPLETE!"
